[package]
name = "permscan"
version = "2.1.3"
edition = "2021"
authors = ["Pythack pythackcode@gmail.com"]
description = "Scan a directory for files that match permission criteria. \nVisit https://github.com/Pythack/permscan#readme for more information. "
documentation = "https://github.com/Pythack/permscan/wiki"
repository = "https://github.com/Pythack/permscan"
homepage = "https://github.com/Pythack/permscan"
readme = "https://github.com/Pythack/permscan#permscan"
[[bin]]
name = "permscan"
path = "./src/main.rs"
[dependencies]
structopt = { version = "0.3.26", default-features = false }
regex = "1.5.5"
itertools = "0.10.3"
array_tool = "1.0.3"
