[package]
name = "permscan"
version = "2.1.3"
edition = "2021"
authors = ["Pythack pythackcode@gmail.com", "gmnsii 95436780+gmnsii@users.noreply.github.com"]
description = "Scan a directory for files that match permission criteria."
documentation = "https://github.com/Pythack/permscan/wiki"
repository = "https://github.com/Pythack/permscan"
homepage = "https://github.com/Pythack/permscan"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "filesystem", ]

[[bin]]
name = "permscan"
path = "./src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
structopt = { version = "0.3.26", default-features = false }
regex = "1.5.5"
itertools = "0.10.3"
array_tool = "1.0.3"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
tokio = { version = "1.17.0", features = ["full"] }
